# weather-station

./: .gitignore  Makefile  README.md
src/common/: protocol.h
src/ipc_utils/: shared_mem.cpp  shared_mem.h
src/sensor_client/: main.cpp
src/server_collector/: main.cpp
src/server_front/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
